aula de semântica

--- a/minha_receita.html
+++ b/minha_receita.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Receita</title>
+    <title>Minha Receia</title>
 </head>
-<body>
-    <h1>Bolo de Pote sabor Chocolate</h1>
+<main>
+    <article>
+        <hearder>
+            <h1>Bolo de Pote sabor Chocolate</h1>
+        </hearder>
 
-    <div>
-        <h2>Ingredientes</h2>
-        <p> 3 colheres de sopa de oleo<br>
-        4 colheres de sopa de açucar<br>
-    4 colheres de sopa de fainha de trigo<br>
-4 Colheres de sopa de achocolatado/cacau<br>
-4 colheres de sopra de leite<br>
-1 ovo</p>
-    </div>
-    <h2>Modo de preparo</h2>
-    <p>Em um recipiente, coloque todos os ingredientes e misture até ficar omogenio.</p>
-    <p>Leve para o microondas po 2 minutos. <span style="color: crimson;" >Caso não estiver assado por  completo </span>, vá colocando de 30 em 30 segundos até ficar no ponto deejado.</p>
-</body>
+        <section>
+            <h2>Ingredientes</h2>
+            <p> 3 colheres de sopa de oleo<br>
+                4 colheres de sopa de açucar<br>
+                4 colheres de sopa de fainha de trigo<br>
+                4 Colheres de sopa de achocolatado/cacau<br>
+                4 colheres de sopra de leite<br>
+                1 ovo</p>
+
+        </section>
+        <section>
+            <h2>Modo de preparo</h2>
+            <p>Em um recipiente, coloque todos os ingredientes e misture até ficar omogenio.</p>
+            <p>Leve para o microondas po 2 minutos. <span style="color: crimson;">Caso não estiver assado por completo
+                </span>, vá colocando de 30 em 30 segundos até ficar no ponto deejado.</p>
+
+<footer>
+    <p>&copy; 2025 - Minha empresa Tech. Todos os direitos reservados. | <a
+    href="#"></a></p>
+</footer>
+            </main>
+</section>
+</article>
+
 </html>
