--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá Mundo</title>
 </head>
-<body>
-    <div>
+<main>
+    <header></header>
    <h1> Olá mundo</h1>
    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse numquam pariatur sequi atque sint, culpa voluptates ullam beatae dolorum, vel voluptatem expedita corrupti eos quisquam fugiat eum labore libero consequatur!</p>
    </div> 
-</body>
 </html>
