--- a/comida.html
+++ b/comida.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="src/imagens/lasanhaaa.jpg"
-    <title>Minha Comida Favorita</title>
+    <link rel="icon" href="src/imagens/lasanhaaa.jpg" <title>Minha Comida Favorita</title>
 </head>
+
 <body>
     <h1 title="Meu prato preferido">Lasanha à Bolonhesa</h1>
     <p>É um prato gostoso e saboroso, bom para comer com uma coca gelada.</p>
     <!--Fim da descrição do prato-->
     <p> Página criada em 19 de agosto de 2025</p>
+    <p>
+        Visite o <a href="https://www.google.com">Google</a> para fazer suas
+        pesquisas.
+    </p>
+    <a href="meu.hobby.html">Meu Hobby</a>
+    <a href="minha_receita.html">Minha Receita</a>
+    <p> Vamos voltar para a <a href="comida.html"></a> pagina inicial</p>
+    <a href="#" style="color: green;">Link Verde</a>
+    <a href="meu.hobby.html">Ir para a página de Meu Hobby</a>
+    <a href="subpasta/arquivoSubPasta.html">Ir para o arquivo dentro de uma subpasta</a>
 </body>
+
 </html>
