--- a/minha_receita.html
+++ b/minha_receita.html
@@ -7,6 +7,7 @@
     <title>Minha Receia</title>
 </head>
 <main>
+    <p>Vamos para a página <a href=""></a></p>
     <article>
         <hearder>
             <h1>Bolo de Pote sabor Chocolate</h1>
@@ -21,12 +22,44 @@
                 4 colheres de sopra de leite<br>
                 1 ovo</p>
 
+                <h2>Lista de Compras</h2>
+<ul>
+<li>Arroz</li>
+<li>Feijão</li>
+<li>Café</li>
+</ul>
+
+<h2>Passos para Fazer Café</h2>
+<ol>
+<li>Ferva a água.</li>
+<li>Coloque o pó no coador.</li>
+<li>Despeje a água quente.</li>
+</ol>
+
         </section>
         <section>
             <h2>Modo de preparo</h2>
             <p>Em um recipiente, coloque todos os ingredientes e misture até ficar omogenio.</p>
             <p>Leve para o microondas po 2 minutos. <span style="color: crimson;">Caso não estiver assado por completo
                 </span>, vá colocando de 30 em 30 segundos até ficar no ponto deejado.</p>
+                <p> Vamos voltar para a <a href="comida.html"></a> pagina inicial</p>
+
+<h2>Glossário da Web</h2>
+<dl>
+<dt>HTML</dt>
+<dd>
+Linguagem de Marcação de Hipertexto,
+
+usada para estruturar páginas
+
+web.
+</dd>
+</dl>
+<h2>Lista Encadeadas</h2>
+<ul>
+<li>Bebidas</li>
+<ol>
+<li>Café.</li>
 
 <footer>
     <p>&copy; 2025 - Minha empresa Tech. Todos os direitos reservados. | <a
