Formativa -Milena Hoppe Sales

--- a/comida.html
+++ b/comida.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="src/imagens/lasanhaaa.jpg" <title>Minha Comida Favorita</title>
+    <link rel="icon" href="src/imagens/lasanhaaa.jpg"> </link> <title>Minha Comida Favorita</title>
 </head>
 
 <body>
